--- a/main.css
+++ b/main.css
@@ -4,6 +4,8 @@ body{
    text-align: center;
    color: white;
    max-width: 1920px;
+   margin: 0 ;
+   padding: 0;
 }
 
 .main-text{
@@ -28,8 +30,18 @@ body{
 .main-text--second{
    margin-top: 100px;
    background: url(4.jpg);
-   font-size: 150px;
    color: transparent;
    -webkit-background-clip: text;
    animation: animate 15s infinite linear;
+}
+
+@media(max-width: 425px){
+   body{
+      max-width: 425px;
+      padding: 0 15px;
+   }
+   .main-text{
+      font-size: 54px;
+   }
+  
 }
