--- a/main.css
+++ b/main.css
@@ -1,47 +1,295 @@
-body{
-   font-family: 'Sigmar One', cursive;
-   background: rgb(46, 45, 45);
-   text-align: center;
-   color: white;
-   max-width: 1920px;
-   margin: 0 ;
-   padding: 0;
+* {
+  font-family: "Sigmar One", cursive;
+  box-sizing: border-box;
 }
 
-.main-text{
-   margin-top: 210px;
-   background: url(3.jpg);
-   font-size: 150px;
-   color: transparent;
-   -webkit-background-clip: text;
-   animation: animate 12s infinite linear;
+body {
+  max-width: 1920px;
+  margin: 0;
+  padding: 0;
+  /* height: 1000px; */
 }
 
-@keyframes animate{
-   from{
-      background-position: 0 0;
-   }
-
-   to{
-      background-position: 100% 100%;
-   }
+.wrapper {
+  text-align: center;
 }
 
-.main-text--second{
-   margin-top: 100px;
-   background: url(4.jpg);
-   color: transparent;
-   -webkit-background-clip: text;
-   animation: animate 15s infinite linear;
+/* По тексту бегает картинка */
+/* 
+.first-animation {
+  background: linear-gradient(45deg, #000046, #1cb5e0, rgb(3, 85, 3), black);
+  color: white;
+  padding-top: 250px;
+  padding-bottom: 260px;
+  animation: gradient 10s infinite linear;
+  animation-direction: alternate;
+  background-size: 200% 200%;
 }
 
-@media(max-width: 425px){
-   body{
-      max-width: 425px;
-      padding: 0 15px;
-   }
-   .main-text{
-      font-size: 54px;
-   }
-  
+.main-text {
+  background: url(3.jpg);
+  font-size: 140px;
+  color: transparent;
+  -webkit-background-clip: text;
+  animation: animate 60s infinite linear;
+  animation-direction: alternate;
 }
+
+@keyframes animate {
+  0% {
+    background-position: 0 0;
+  }
+
+  50% {
+    background-position: 100% 100%;
+  }
+
+  100% {
+    background-position: 0 0;
+  }
+} */
+
+/* переливающийся градиент */
+
+/* @keyframes gradient {
+  0% {
+    background-position: 0 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0 50%;
+  }
+}
+
+.main-text-second {
+  background: url(7.jpg);
+  font-size: 100px;
+  color: transparent;
+  -webkit-background-clip: text;
+} */
+
+/* волновой эффект */
+
+.wrapper{
+  padding-top: 50px;
+}
+
+.main {
+  display: flex;
+  height: 90vh;
+  position: relative;
+}
+
+.main-wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: url(./dead.jpg) no-repeat center;
+  background-size: cover;
+  z-index: 3;
+}
+
+.overlay {
+  width: 100%;
+  height: 100%;
+  position: relative;
+  z-index: 4;
+  background: url(./live.jpg) no-repeat center;
+  background-size: cover;
+  background-attachment: fixed;
+  transition: 2.5s linear;
+}
+
+.overlay:hover {
+  opacity: 0;
+  transition: 2.5s linear;
+}
+
+/* алладин с джином */
+
+/* .flex {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 600px;
+}
+
+.alladin {
+  position: relative;
+}
+
+.djin {
+  position: relative;
+}
+
+.lamp-image {
+  position: absolute;
+  top: 5px;
+  left: 204px;
+  animation: lamp 1.5s ease-in-out infinite alternate;
+}
+
+.light-image {
+  position: absolute;
+  top: -134px;
+  left: -176px;
+  width: 614px;
+  z-index: -1;
+  animation: light 10s infinite;
+}
+
+.djin-image {
+  animation: djin 1.6s infinite alternate;
+}
+
+.ball-image {
+  position: absolute;
+  top: 350px;
+  right: 247px;
+  width: 100px;
+  animation: ball 1.6s infinite alternate;
+}
+
+@keyframes lamp {
+  from {
+    transform: translateY(-40px);
+  }
+
+  to {
+    transform: translateY(10px);
+  }
+}
+
+@keyframes light {
+  from {
+    transform: rotate(0deg);
+  }
+
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+@keyframes djin {
+  0% {
+    transform: rotate(-10deg) translateY(-20px);
+  }
+
+  100% {
+    transform: rotate(20deg) translateY(20px);
+  }
+}
+
+@keyframes ball {
+  from {
+    transform: translateY(0px);
+  }
+
+  to {
+    transform: translateY(-60px);
+  }
+} */
+
+/* прыгающая кнопка */
+/* @keyframes bouncing {
+  0% {
+    bottom: 0;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
+  }
+  100% {
+    bottom: 100px;
+    box-shadow: 0 50px 50px rgba(0, 0, 0, 0.1);
+  }
+}
+
+.second-animation {
+}
+
+.btn {
+  border: 1px solid black;
+  padding: 20px 40px;
+  font-size: 30px;
+}
+
+.btn__second-animation {
+  margin-top: 100px;
+  background-size: 200% 200%;
+  -webkit-background-clip: text;
+  background: linear-gradient(45deg, #f12711, #f5af19, black);
+  animation: bouncing 0.5s cubic-bezier(0.1, 0.25, 0.1, 1) 0s infinite alternate
+    both;
+  border-radius: 2px;
+  cursor: pointer;
+  letter-spacing: 0.2em;
+  position: relative;
+  vertical-align: top;
+}
+
+.btn-text {
+  font-size: 40px;
+}
+
+.second-animation-text {
+}
+
+.button-wrapper {
+  margin-top: 50px;
+}
+
+@media (max-width: 425px) {
+  body {
+    max-width: 425px;
+    padding: 0 15px;
+  }
+  .main-text {
+    font-size: 54px;
+  }
+}
+
+.rain {
+  height: 100vh;
+  width: 100%;
+  background: url(./city.jpg);
+  background-size: cover;
+}
+.water {
+  height: 100vh;
+  background: url(./water.png);
+  animation: water 0.3s linear infinite;
+}
+
+@keyframes water {
+  0% {
+    background-position: -10% -10%;
+  }
+
+  100% {
+    background-position: 20% 100%;
+  }
+} */
+
+/* parallax */
+
+/* .mouse-parallax {
+  height: 100vh;
+  position: relative;
+  overflow: hidden;
+}
+
+.mouse-parallax-bg {
+  position: absolute;
+  background-image: url("./bg.jpg");
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 110%;
+  height: 110%;
+  transition: all 0.1s ease;
+} */
